# crawled-data-cleaning

./: README.md  pyproject.toml
assets/texts/: hikakin.txt  ryoko.txt  sushiro.txt  tsukumin.txt
crawled_data_cleaning/: cleaner.py  wikipedia.py
tests/: test_cleaners.py  test_wikipedia_cleaners.py
