[tool.poetry]
name = "crawled-data-cleaning"
version = "0.1.0"
description = "ウェブクロールデータのクリーニング"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "crawled_data_cleaning"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
